<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:id="@+id/mainLayout"
    tools:context="com.epicodus.madlibs.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Fill in the Blanks!"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryText"
        android:paddingTop="10dp"
        android:id="@+id/appHeader" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:layout_below="@+id/appHeader"
        android:layout_centerHorizontal="true" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_below="@+id/spinner"
        android:layout_above="@+id/btnCreateStory">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/tableLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="A Place"
                android:id="@+id/tvPlace"
                android:layout_column="4"
                android:textStyle="normal"
                android:textSize="15sp"
                android:textColor="@color/colorSecondaryText" />

            <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:id="@+id/tfPlace"
                android:layout_column="8"
                 />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="Adjective #1"
                android:id="@+id/tvAdjective1"
                android:layout_column="4"
                android:textStyle="normal"
                android:textSize="15sp"
                android:textColor="@color/colorSecondaryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:id="@+id/tfAdjective1"
                android:layout_column="8"
                 />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="Adjective #2"
                android:id="@+id/tvAdjective2"
                android:layout_column="4"
                android:textStyle="normal"
                android:textSize="15sp"
                android:textColor="@color/colorSecondaryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:id="@+id/tfAdjective2"
                android:layout_column="8"
                 />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:text="Female Celebrity"
                android:id="@+id/tvFemCeleb"
                android:layout_column="4"
                android:textStyle="normal"
                android:textSize="15sp"
                android:textColor="@color/colorSecondaryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:id="@+id/tfFemCeleb"
                android:layout_column="8"
                 />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:text="Male Celebrity"
                android:id="@+id/tvMalCeleb"
                android:layout_column="4"
                android:textStyle="normal"
                android:textSize="15sp"
                android:textColor="@color/colorSecondaryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:id="@+id/tfMalCeleb"
                android:layout_column="8"
                 />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:text="Noun #1"
                android:id="@+id/tvNoun1"
                android:layout_column="4"
                android:textStyle="normal"
                android:textSize="15sp"
                android:textColor="@color/colorSecondaryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:id="@+id/tfNoun1"
                android:layout_column="8"
                 />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:text="Noun #2"
                android:id="@+id/tvNoun2"
                android:layout_column="4"
                android:textStyle="normal"
                android:textSize="15sp"
                android:textColor="@color/colorSecondaryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:id="@+id/tfNoun2"
                android:layout_column="8"
                 />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:text="Noun #3"
                android:id="@+id/tvNoun3"
                android:layout_column="4"
                android:textStyle="normal"
                android:textSize="15sp"
                android:textColor="@color/colorSecondaryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:id="@+id/tfNoun3"
                android:layout_column="8"
                 />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:text="Plural Noun #1"
                android:id="@+id/tvPluralNoun1"
                android:layout_column="4"
                android:textStyle="normal"
                android:textSize="15sp"
                android:textColor="@color/colorSecondaryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:id="@+id/tfPluralNoun1"
                android:layout_column="8"
                 />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:text="Plural Noun #2"
                android:id="@+id/tvPluralNoun2"
                android:layout_column="4"
                android:textStyle="normal"
                android:textSize="15sp"
                android:textColor="@color/colorSecondaryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:id="@+id/tfPluralNoun2"
                android:layout_column="8"
                 />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:text="Plural Noun #3"
                android:id="@+id/tvPluralNoun3"
                android:layout_column="4"
                android:textStyle="normal"
                android:textSize="15sp"
                android:textColor="@color/colorSecondaryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:id="@+id/tfPluralNoun3"
                android:layout_column="8"
                 />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:text="Plural Noun #4"
                android:id="@+id/tvPluralNoun4"
                android:layout_column="4"
                android:textStyle="normal"
                android:textSize="15sp"
                android:textColor="@color/colorSecondaryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:id="@+id/tfPluralNoun4"
                android:layout_column="8"
                 />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:text="Plural Profession"
                android:id="@+id/tvPluralProf"
                android:layout_column="4"
                android:textStyle="normal"
                android:textSize="15sp"
                android:textColor="@color/colorSecondaryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:id="@+id/tfPluralProf"
                android:layout_column="8"
                 />
        </TableRow>

    </TableLayout>
    </ScrollView>


    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Create Story"
        android:id="@+id/btnCreateStory"
        android:background="@color/colorAccent"
        android:textColor="@color/colorPrimaryLight"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_alignParentBottom="true" />




</RelativeLayout>
